updated footer intra-site links

--- a/css/reviews.css
+++ b/css/reviews.css
@@ -58,7 +58,7 @@
     line-height: 1.4em;
     text-align: left;
     font-weight: bold;
-    font-size: 28px;
+    font-size: 1.3125em;
     display: block;
   }
   #reviews .review .star-group .desc {
